--- a/training.html
+++ b/training.html
@@ -171,20 +171,20 @@ permalink: /training/
                 <h2>Workshops</h2>
                 <div class="row">
                     <div class="col-6"><div><img src="https://sybiltec.com/images/start-up-bromley-business-week.png" style="width:100%; max-width:560px;" alt="Start Up Bromley Business Week. Workshops and events running Monday 14th March - Saturday 19th March"></div></div>
-                    <div class="col-6"><p>In March 2022, as part of Start Up Bromley Business Week, Sybil presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>.</p><div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/business-week-day-1-e-commerce-deep-dive-selling-your-products-online-tickets-272059095077" target="_blank" rel="noopener noreferrer">Read More</a></div></div>
+                    <div class="col-6"><p>In March 2022, as part of Start Up Bromley Business Week, Sybil presented a 2-hour in-person workshop entitled <em>E-commerce Deep Dive: Selling Your Products Online</em>.</p><div class="padding-top padding-bottom"><a class="btn-secondary" href="https://www.eventbrite.co.uk/e/business-week-day-1-e-commerce-deep-dive-selling-your-products-online-tickets-272059095077" target="_blank" rel="noopener noreferrer">E-commerce Deep Dive >></a></div></div>
                 </div>
                 
                 <div class="row">
                     <div class="col-6"><div><img src="https://sybiltec.com/images/sybil-mayard-consultant-conquering-social-media-day.jpg" style="width:100%; max-width:560px;" alt="Sybil Mayard, consultant at Conquering Social Media Day"></div></div>
                     <div class="col-6"><p>In March 2023, as part of Start Up Business Week 2023, Sybil participated in <em>Conquering Social Media Day</em> as a Consultant, advising small businesses on a 1-2-1 basis on how to improve the design of their website.</p>
-                        <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.com/e/conquering-social-media-day-tickets-539198997717" target="_blank" rel="noopener noreferrer">Read More</a></div>
+                        <div class="padding-top padding-bottom"><a class="btn-secondary" href="https://www.eventbrite.com/e/conquering-social-media-day-tickets-539198997717" target="_blank" rel="noopener noreferrer">Conquering Social Media Day >></a></div>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-6"><div><img src="https://sybiltec.com/images/sybil-mayard-gary-parker-at-british-library.jpg" style="width:100%; max-width:560px;" alt="Sybil Mayard and Gary Parker at the British Library"></div></div>
                     <div class="col-6"><p>On 25 April 2023, Sybil and her colleague Gary Parker delivered our popular in-person workshop, <em>Funding and Opportunities for E-commerce</em>.</p>
-                        <div class="padding-top padding-bottom"><a class="btn-primary" href="https://www.eventbrite.co.uk/e/funding-and-opportunities-for-e-commerce-free-live-event-tickets-566384680827" target="_blank" rel="noopener noreferrer">Read More</a></div>
+                        <div class="padding-top padding-bottom"><a class="btn-secondary" href="https://www.eventbrite.co.uk/e/funding-and-opportunities-for-e-commerce-free-live-event-tickets-566384680827" target="_blank" rel="noopener noreferrer">Funding and Opportunities for E-commerce >></a></div>
                     </div>
                 </div>
 
