Changes to the homepage

--- a/index.html
+++ b/index.html
@@ -222,33 +222,45 @@
             <hr>
             <p class="center">See the testimonials below of our clients' experiences of working with us as their web designer. All customers are delighted with our services; as a result, many choose us to be their trusted partner for working together on a long-term basis.</p>
             <div class="row">
-                <div class="col-6">
+                <div class="col-4">
                     <div class="testimonial-card">
                         <img src="images/zitka-stone.png" class="avatar" alt="Zita Stone">
                         <p><strong><em>Zita Stone, NeroWireArt</em></strong></p>
+                        <div class="stars">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                        </div>
                         <p>Outstanding support and ongoing experience of working with Sybil @Sybiltec. Her suggestions on the design, comms management and assistance with any problem resolution have been second to none. Amazing service, thank you!</p>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-4">
                     <div class="testimonial-card">
                         <img src="images/gary-parker.png" class="avatar" alt="Gary Parker">
                         <p><strong><em>Gary Parker, Managing Director, CNT Associates</em></strong></p>
+                        <div class="stars">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                        </div>
                         <p>Sybil is hard working, highly skilled and manages to communicate digital service issues in a way that makes them jargon free and understandable. Her work is of a high quality and she is able to work both as part of a team and on her own initiative.</p>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-6">
-                    <div class="testimonial-card">
-                        <img src="images/hany-abdelkhalek.png" class="avatar" alt="Hany Abdelkhalek">
-                        <p><strong><em>Hany Abdelkhalek</em></strong></p>
-                        <p>Sybil is a highly skilled developer whom I had the pleasure of working with on a small landing pages project. I would highly recommend Sybil to anyone in need of a professional-looking website, especially if they're unsure where to begin.</p>
-                    </div>
-                </div>
-                <div class="col-6">
+                <div class="col-4">
                     <div class="testimonial-card">
                         <img src="images/aurore-lacabe.png" class="avatar" alt="Aurore Lacabe">
                         <p><strong><em>Aurore Lacabe, Voice Teacher</em></strong></p>
+                        <div class="stars">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                        </div>
                         <p>Sybil was reliable and really supportive throughout the making of my website. I am really happy with the final result and would wholeheartedly recommend Sybil to anyone who needs a website and wants it to have a professional look.</p>
                     </div>
                 </div>
@@ -265,33 +277,27 @@
                     <p>Read our selection of blog posts for web design tips and advice, guides to help you make the most of your website, and the latest news from Sybiltec.</p>
                 </div>
                 <div class="row">
-                    <div class="col-4">  
+                    <div class="col-3">  
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/website-compliance-quick-guide/"><img src="https://sybiltec.com/images/wooden-gavel-sitting-on-computer-keyboard.jpg" alt="Wooden gavel sitting on computer keyboard"></a>
                                 <div class="blog-card-text">                      
                                 <a href="https://sybiltec.com/website-compliance-quick-guide/" class="blog-title">A Quick Guide to Website Compliance</a>
                                 <p>05 June 2024</p>
                                 <p>What is website compliance? Read our quick guide to find out what is legally required on your website.</p>
-                                <div class="padding-top">
-                                    <a class="btn-secondary" href="https://sybiltec.com/website-compliance-quick-guide/">Website Compliance >></a>   
-                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">          
+                    <div class="col-3">          
                         <div class="blog-card">
                             <a href="https://sybiltec.com/cyber-security-best-practices-for-business/"><img src="images/person-holding-black-iphone-5-400x209.jpg" alt="Person holding black iPhone 5"></a>  
                             <div class="blog-card-text">               
-                                <a href="https://sybiltec.com/cyber-security-best-practices-for-business/" class="blog-title">Cyber Security Best Practices</a>
+                                <a href="https://sybiltec.com/cyber-security-best-practices-for-business/" class="blog-title">Cyber Security Best Practices for Business</a>
                                 <p>19 May 2024</p>
-                                <p>Cyber security is a top priority for every business. Read our blog for guidance on how to keep your organisation protected against cyber crime.</p>
-                                <div class="padding-top">
-                                    <a class="btn-secondary" href="https://sybiltec.com/cyber-security-best-practices-for-business/">Secure My Business >></a>   
-                                </div>
+                                <p>Cyber security is a top priority for your organisation. Read our guide on how to stay protected.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-4"> 
+                    <div class="col-3"> 
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">
                                 <img src="https://sybiltec.com/images/white-and-blue-analogue-tachometer-gauge.jpg" 
@@ -300,9 +306,18 @@
                                 <a href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/" class="blog-title">8 Ways to Speed Up Your Windows PC</a>
                                 <p>17 April 2024</p>
                                 <p>Are you suffering from a slow PC? Read our latest post on how to make your computer or laptop run faster.</p>
-                                <div class="padding-top">
-                                    <a class="btn-secondary" href="https://sybiltec.com/ways-to-speed-up-your-windows-pc/">Speed Up My PC! >></a>   
-                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3"> 
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/user-experience-ux/">
+                                <img src="https://sybiltec.com/images/white-and-black-laptop-400x209.jpg" 
+                                alt="White and black laptop"></a>
+                            <div class="blog-card-text">                    
+                                <a href="https://sybiltec.com/user-experience-ux/" class="blog-title">9 Ways to Improve the UX of Your Website</a>
+                                <p>19 March 2024</p>
+                                <p>Good user experience is the key to a successful website. Read our blog article for helpful tips.</p>
                             </div>
                         </div>
                     </div>
