--- a/services.html
+++ b/services.html
@@ -179,7 +179,7 @@ permalink: /services/
                     </div>
                     <div class="col-4">
                         <div class="offer-card center">
-                            <i class="fa-regular fa-file-image"></i>
+                            <i class="fa-solid fa-cart-shopping"></i>
                         <h3>E-commerce Websites</h3>
                         <p>Are you planning to sell your products or services online? If yes, you'll need an e-commerce site. We will design and build an online store for your business on Shopify or WooCommerce.</p>
                         <div class="center padding-bottom padding-top">
