Update blog listing pages

--- a/blog-2.html
+++ b/blog-2.html
@@ -167,10 +167,16 @@ permalink: /blog-2/
                         Sybiltec's Blog Page 2
                     </li>
                 </ol>
-                <h2>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h2>
-                <p>A fast loading WordPress site is essential for good user experience and SEO. In this blog post we discuss 10 steps you can take to maximise your site's speed. …</p>
+                <h2>How to Backup Your WordPress Website with UpdraftPlus</h2>
+                <p>Ask yourself a question: when was the last time you backed up your WordPress website? Hopefully the answer is not "three years ago", or worse still, "never"! Imagine spending weeks or months on building your website, only to lose all the results of your hard work forever 😭 …</p>
                 <br>
-                <a class="btn-secondary" href="https://sybiltec.com/fix-slow-wordpress-website/">Fix My Site! >></a>
+                <a class="btn-secondary" href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">Backup Your Website >></a>
+                <div class="padding-top">
+                    <h2>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h2>
+                    <p>A fast loading WordPress site is essential for good user experience and SEO. In this blog post we discuss 10 steps you can take to maximise your site's speed. …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/fix-slow-wordpress-website/">Fix My Site! >></a>
+                </div>
                 <div class="padding-top">
                     <h2>How to Install GA4 on Your WordPress Website</h2>
                     <p>Ensure that your WordPress website is not password-protected or in maintenance mode before proceeding. …</p>
@@ -218,12 +224,6 @@ permalink: /blog-2/
                     <p>Have you stopped to think about how you are using your customers' data? If not, then you probably don't have a privacy notice - a crucial document for creating a compliant and trustworthy website. In this blog article, we present to you a few areas to consider when creating your privacy notice. …</p>
                     <br>
                     <a class="btn-secondary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Use Data Appropriately >></a>
-                </div>
-                <div class="padding-top">
-                    <h2>The Importance of Contact Information on Your Website</h2>
-                    <p>Our recent LinkedIn poll found that allowing your customers to easily contact you via your website is the most important factor when creating a trustworthy website. Read on to find out why, and our advice on how to make your contact information more visible on your website. …</p>
-                    <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/importance-of-contact-information-on-your-website/">Review Your Contact Info >></a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog/">Page 1</a> | <a href="https://sybiltec.com/blog-3/">Page 3</a></div>
             </div>
