--- a/blog-3.html
+++ b/blog-3.html
@@ -167,10 +167,16 @@ permalink: /blog-3/
                         Sybiltec's Blog Page 3
                     </li>
                 </ol>
+                <h2>The Importance of Contact Information on Your Website</h2>
+                <p>Our recent LinkedIn poll found that allowing your customers to easily contact you via your website is the most important factor when creating a trustworthy website. Read on to find out why, and our advice on how to make your contact information more visible on your website. …</p>
+                <br>
+                <a class="btn-secondary" href="https://sybiltec.com/importance-of-contact-information-on-your-website/">Review Your Contact Info >></a>
+                <div class="padding-top">
                     <h2>How Does a Good Website Showcase Trust?</h2>
                     <p>According to our recent LinkedIn poll, 95% of respondents indicated that "good websites showcase trust." But what exactly constitutes a trustworthy website? In this blog post, we examine six key factors you need to consider when developing a well-designed and compliant website. …</p>
                     <br>
                     <a class="btn-secondary" href="https://sybiltec.com/how-does-a-good-website-showcase-trust/">Create a Trustworthy Website >></a>
+                </div>
                 <div class="padding-top">
                     <h2>7 Reasons Why You Should be Using Shopify</h2>
                     <p>Are you planning to sell your products or services online? Consider choosing Shopify, one of the most popular e-commerce platforms. Here I present to you a few of the benefits you can enjoy. Customisable Themes Coding and design skills are not necessary to make your store look unique and fabulous! Shopify offers a selection of …</p>
@@ -189,7 +195,7 @@ permalink: /blog-3/
                         <br>
                         <a class="btn-secondary" href="https://sybiltec.com/6-tips-for-surviving-remote-working/">Survive Remote Working >></a>
                 </div>
-                <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2/">Page 2</a></div>
+                <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog/">Page 1</a> | <a href="https://sybiltec.com/blog-2/">Page 2</a></div>
             </div>
         </div>
         <div class="contact section">
