--- a/blog.html
+++ b/blog.html
@@ -167,10 +167,16 @@ permalink: /blog/
                         Sybiltec's Blog
                     </li>
                 </ol>
-                <h2>Cyber Security Best Practices for Business</h2>
-                <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips and advice in this blog. By following good cyber security practices, you can enjoy a safe and secure experience both online and offline. …</p>
+                <h2>A Quick Guide to Website Compliance</h2>
+                <p>Is your website compliant? As a business owner, there are certain legal requirements that your website must meet. In this article, we discuss accessibility regulations (WCAG), data protection regulations (GDPR) and other UK laws. …</p>
                 <br>
-                <a class="btn-secondary" href="https://sybiltec.com/cyber-security-best-practices-for-business/">Secure My Business >></a>
+                <a class="btn-secondary" href="https://sybiltec.com/website-compliance-quick-guide/">Is Your Website Compliant? >></a>
+                <div class="padding-top">
+                    <h2>Cyber Security Best Practices for Business</h2>
+                    <p>Cybercrime is constantly on the rise; make sure to keep yourself, your business and your customers safe by following the tips and advice in this blog. By following good cyber security practices, you can enjoy a safe and secure experience both online and offline. …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/cyber-security-best-practices-for-business/">Secure My Business >></a>
+                </div>
                 <div class="padding-top">
                     <h2>8 Ways to Speed Up Your Windows PC</h2>
                         <p>It can be frustrating to deal with a slow computer. But if you're tempted to throw it away, first consider these 8 things you can try in order to speed it up! …</p>
@@ -219,13 +225,7 @@ permalink: /blog/
                         <br>
                         <a class="btn-secondary" href="https://sybiltec.com/improve-website-seo/">Improve My SEO >></a>
                 </div>
-                <div class="padding-top">
-                    <h2>How to Backup Your WordPress Website with UpdraftPlus</h2>
-                    <p>Ask yourself a question: when was the last time you backed up your WordPress website? Hopefully the answer is not "three years ago", or worse still, "never"! Imagine spending weeks or months on building your website, only to lose all the results of your hard work forever 😭 …</p>
-                    <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/backup-wordpress-website-using-updraftplus/">Backup Your Website >></a>
-                </div>
-                <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2/">Page 2</a></div>
+                <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2/">Page 2</a> | <a href="https://sybiltec.com/blog-3/">Page 3</a></div>
             </div>
         </div>
         <div class="contact section">
