--- a/strategies-for-business-success.html
+++ b/strategies-for-business-success.html
@@ -190,7 +190,7 @@ permalink: /strategies-for-business-success/
                     </li>
                 </ol>
                 <p>Date published: 18 June 2024 | by Katie Conroy</p>
-                <img class="screenshot" src="images/black-lady-working-laptop-her-office.jpg" alt="Black lady working on a laptop in her office"><br>
+                <img class="screenshot" src="https://sybiltec.com/images/black-lady-working-laptop-her-office.jpg" alt="Black lady working on a laptop in her office"><br>
                 <a href="http://www.freepik.com" target="_blank">Image by rawpixel.com / Freepik</a>
                 <p>In the digital age, a well-optimised website is more than just a business card; it's a powerful tool to ensure the success and resilience of your business during uncertain times. By refining your online presence, you can enhance customer engagement, streamline operations, and secure a competitive advantage. Courtesy of Sybiltec, explore the critical strategies that can transform your website into a robust platform for growth.</p>
                 <h2>Harnessing Customer Feedback</h2>
