Update Web Design Bexley

--- a/web-design-bexley.html
+++ b/web-design-bexley.html
@@ -32,13 +32,13 @@ permalink: /web-design-bexley/
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Web Design for Bexley Small Businesses and SMEs | Sybiltec</title>       
-        <meta name="Description" content="Offering subsidised web design services for small businesses in Bexley via the Talking Business programme. Contact us about website support.">
+        <meta name="Description" content="Subsidised web design & free business support for Bexley small businesses on the fully-funded Talking Business programme. Places are limited, register now.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/web-design-bexley/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Web Design for Bexley Small Businesses and SMEs | Sybiltec" />
-        <meta property="og:description" content="Offering subsidised web design services for small businesses in Bexley via the Talking Business programme. Contact us about website support." />
+        <meta property="og:description" content="Subsidised web design & free business support for Bexley small businesses on the fully-funded Talking Business programme. Places are limited, register now." />
         <meta property="og:url" content="https://sybiltec.com/web-design-bexley/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/web-design-bexley.png" />
@@ -224,7 +224,7 @@ permalink: /web-design-bexley/
                 </div>
 
                 <div class="partners section center padding-top padding-bottom grey">
-                    <p><strong>Talking Business will be running for a limited time only. To secure your place, start your application today by clicking Register Now.</strong></p>
+                    <h3>Talking Business will be running for a limited time only. To secure your place, start your application today by clicking Register Now.</p>
                     <div class="padding-top padding-bottom"><a class="btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScd4ShuAr0QU5nx8gdUferjS52L_U1FSwSPeopouOFqxlXI8Q/viewform" target="_blank" rel="noopener noreferrer">Register Now</a></div>
                 </div>
 
@@ -247,7 +247,7 @@ permalink: /web-design-bexley/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.ldtiling.co.uk/" 
-                                target="_blank" rel="noopener noreferrer">View LD Tiling Contractors</a>
+                                target="_blank" rel="noopener noreferrer">LD Tiling Contractors >></a>
                             </div>
                         </div>
                     </div>
@@ -268,7 +268,7 @@ permalink: /web-design-bexley/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://happilyclappilyeverlaughter.com"
-                                target="_blank" rel="noopener noreferrer">View Happily Clappily</a>
+                                target="_blank" rel="noopener noreferrer">Happily Clappily >></a>
                             </div>
                         </div>
                     </div>
@@ -289,7 +289,7 @@ permalink: /web-design-bexley/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://pathways21.com" 
-                                target="_blank" rel="noopener noreferrer">View Pathways 21</a>
+                                target="_blank" rel="noopener noreferrer">Pathways 21 >></a>
                             </div>
                         </div>
                     </div>
@@ -313,7 +313,7 @@ permalink: /web-design-bexley/
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.cntassociates.com/"
-                                target="_blank" rel="noopener noreferrer">View CNT Associates</a>
+                                target="_blank" rel="noopener noreferrer">CNT Associates >></a>
                             </div>
                         </div>
                     </div>
@@ -335,7 +335,7 @@ permalink: /web-design-bexley/
                             </ul>              
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://bluehorizonlnw.com/"
-                                target="_blank" rel="noopener noreferrer">View Blue Horizon LNW</a>
+                                target="_blank" rel="noopener noreferrer">Blue Horizon LNW >></a>
                             </div>
                         </div>
                     </div>
@@ -359,7 +359,7 @@ permalink: /web-design-bexley/
                             </ul>   
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://future-communities.org.uk"
-                                target="_blank" rel="noopener noreferrer">View Future Communities</a>
+                                target="_blank" rel="noopener noreferrer">Future Communities >></a>
                             </div>
                         </div>
                     </div>
@@ -381,7 +381,7 @@ permalink: /web-design-bexley/
                             </ul>  
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://wardellswardrobe.com"
-                                target="_blank" rel="noopener noreferrer">View Wardell's Wardrobe</a>
+                                target="_blank" rel="noopener noreferrer">Wardell's Wardrobe >></a>
                             </div>
                         </div>
                     </div>
@@ -406,54 +406,79 @@ permalink: /web-design-bexley/
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-3">
-                       <img src="https://sybiltec.com/images/logos/TB-Business-Support.png" alt="Bexley Talking Business - Business Support">
-                    </div>
-                    <div class="col-3">
-                       <img src="https://sybiltec.com/images/logos/BexLog_A4_col-NEWbluestrapline18.png" alt="Bexley logo">
-                    </div>
-                    <div class="col-3">
-                       <img src="https://sybiltec.com/images/logos/BBE-Funded-GOV-800-450-2.png" alt="BBE government funded">
-                    </div>
-                    <div class="col-3">
-                       <img src="https://sybiltec.com/images/logos/CNT-Associates-empowering-your-vision-300x98.png" alt="CNT Associates logo">
-                    </div>
-                </div>
-
-                <h2>Testimonials</h2>
-
-                <div class="row">
-                    <div class="col-6">
-                        <div class="testimonial-card">
-                            <p><strong><em>Natalie Wright, Finance Director, LD Tiling Contractors</em></strong></p>
-                            <p>What fantastic service we received from Sybil at Sybiltec, always professional and nothing is too much trouble. Couldn't recommend her enough!</p>
+                <div class="padding-top">
+                    <div class="row">
+                        <div class="col-3">
+                           <img src="https://sybiltec.com/images/logos/TB-Business-Support.png" alt="Bexley Talking Business - Business Support">
                         </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="testimonial-card">
-                            <p><strong><em>Caroline Wardell, Founder, The Bamboo Wardrobe</em></strong></p>
-                            <p>I would highly recommend Sybil; she listens and completely understands what I am asking for. Her knowledge of Shopify is excellent and she knows how to implement what I need.</p>
+                        <div class="col-3">
+                           <img src="https://sybiltec.com/images/logos/BexLog_A4_col-NEWbluestrapline18.png" alt="Bexley logo">
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-6">
-                        <div class="testimonial-card">
-                            <p><strong><em>Patricia Byrne, CEO, Happily Clappily Ever Laughter</em></strong></p>
-                            <p>Sybil is one of those people who are very rare! She is a gem! Not only does Sybil create beautiful websites-they are EXACTLY in detail-what you ask for!</p>
+                        <div class="col-3">
+                           <img src="https://sybiltec.com/images/logos/BBE-Funded-GOV-800-450-2.png" alt="BBE government funded">
                         </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="testimonial-card">
-                            <p><strong><em>Gary Parker, Managing Director, CNT Associates</em></strong></p>
-                            <p>Sybil is hard working, highly skilled and manages to communicate digital service issues in a way that makes them jargon free and understandable.</p>
+                        <div class="col-3">
+                           <img src="https://sybiltec.com/images/logos/CNT-Associates-empowering-your-vision-300x98.png" alt="CNT Associates logo">
                         </div>
                     </div>
                 </div>
 
-                <h2>Web Design Help for non-Bexley Businesses</h2>
-                <p>Do you need web design or development services but your business is based outside of Bexley? Please see the <a href="https://sybiltec.com/website-design/">Small Business Web Design</a> page to find out what support is available.</p>
+            <div class="testimonials section container-1140 padding-bottom">
+            <h2 class="center">Testimonials</h2>
+            <hr>
+            <div class="row">
+                <div class="col-4">
+                    <div class="testimonial-card">
+                        <img src="images/logos/ld-tiling-contractors.png" class="avatar" alt="LD Tiling Contractors">
+                        <p><strong><em>Natalie Wright, Finance Director, LD Tiling Contractors</em></strong></p>
+                        <div class="stars">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                        </div>
+                        <p>What fantastic service we received from Sybil at Sybiltec, always professional and nothing is too much trouble. Couldn't recommend her enough!</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="testimonial-card">
+                        <img src="images/logos/happily-clappily-ever-laughter-logo.png" class="avatar" alt="Happily Clappily Ever Laughter">
+                        <p><strong><em>Patricia Byrne, CEO, Happily Clappily Ever Laughter</em></strong></p>
+                        <div class="stars">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                        </div>
+                        <p>Sybil is one of those people who are very rare! She is a gem! Not only does Sybil create beautiful websites-they are EXACTLY in detail-what you ask for!</p>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="testimonial-card">
+                        <img src="images/logos/the-bamboo-wardrobe-logo.png" class="avatar" alt="The Bamboo Wardrobe">
+                        <p><strong><em>Caroline Wardell, Founder, The Bamboo Wardrobe</em></strong></p>
+                        <div class="stars">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                            <img class="star" src="images/star.png">
+                        </div>
+                        <p>I would highly recommend Sybil; she listens and completely understands what I am asking for. Her knowledge of Shopify is excellent and she knows how to implement what I need.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="center padding-top">
+                <a class="btn-secondary" href="https://search.google.com/local/reviews?placeid=ChIJkyt7fOQ4mSoRztRY0SmLep4" target="_blank" rel="noopener noreferrer">See All Reviews >></a>   
+            </div>
+        </div>
+
+                <div class="padding-top">
+                    <h2>Web Design Help for non-Bexley Businesses</h2>
+                    <p>Do you need web design or development services but your business is based outside of Bexley? Please see the <a href="https://sybiltec.com/website-design/">Small Business Web Design</a> page to find out what support is available.</p>
+                </div>
             </div>
         </div>
         <div class="contact section">
